# snail

./: CMakeLists.txt  README.md  main.cpp  toolchain.cmake
include/: dotenv.h
snail/: CMakeLists.txt  FileTracker.cpp  Options.cpp  Snail.cpp  StringUtils.cpp  StringUtils.h  Tus.cpp  Tus.h  TusBody.cpp  TusBody.h  TusFileUtils.cpp  TusHeader.cpp  TusHeader.h  TusMeta.cpp  TusMeta.h
snail/base64/: CMakeLists.txt  base64.cpp  base64.h
snail/include/: FileTracker.h  Options.h  Snail.h  StringUtils.h  Tus.h  TusBody.h  TusFileUtils.h  TusHeader.h  TusMeta.h
src/: BigFileManager.cpp  BigFileManager.h  CURLPatch.cpp  CURLPatch.h  FileTracker.h  Options.cpp  Options.h  StringUtils.cpp  StringUtils.h  Tus.cpp  Tus.h  TusBody.cpp  TusFileUtils.cpp  TusFileUtils.h  TusHeader.cpp  TusMeta.cpp  main.cpp
